[project]
name = "neutropenia-redcap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["polars", "ruff","ty", "ipython"]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = [
    # ruff defaults
    "E4",
    "E7",
    "E9",
    "F",
    # additional options
    "I",   # isort
    "UP",  # pyupgrade
    "G",   # logging
    "FA",  # future annotations
    "PIE", # misc
]

[tool.uv.sources]
neutropenia_redcap = { workspace = true }

[dependency-groups]
lint = [
    "ruff==0.7.1", # same as pre-commit hook and CI
]
test = [
    "pytest>=8.3.3",
    "neutropenia_redcap",
    "pytest-dependency>=0.6.0",
]
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    "pre-commit>=4.0.1",
]
[tool.setuptools.packages.find]
where = ["src"]
include = ["neutropenia_redcap*"]